# zerovllm

./: GEMINI.md  README.md  SPEC.md
client/: client.go  client_test.go  e2e_test.go  errors.go  go.mod  go.sum  multiplexer.go  telemetry.go
client/cmd/example/: main.go
zeroserver/: benchmark.py  main.py  pyproject.toml  test_output.txt  vllm_mlx.engine.batched.html
zeroserver/src/: inference.py  main.py  router.py  telemetry.py
zeroserver/tests/: test_router.py
